--- a/doc/nt2.dox
+++ b/doc/nt2.dox
@@ -46,8 +46,9 @@ TAB_SIZE               = 2
 
 ALIASES += "metafunction=<a href=\"http://www.boost.org/doc/libs/1_46_1/libs/mpl/doc/refmanual/metafunction.html\">Metafunction</a>"
 ALIASES += "dco=<a href=\"http://www.boost.org/doc/libs/1_46_1/libs/fusion/doc/html/fusion/functional/concepts/def_callable.html\">Defered Callable Object</a>"
-ALIASES += "matlab=<span style=\"font-variant: small-caps;\">Matlab</span>"
 ALIASES += "usage=\par Example Usage:"
+ALIASES += "matlab=<span style=\"font-variant: small-caps;\">Matlab</span>"
+ALIASES += "nt2=<b>NT²</b>"
 
 OPTIMIZE_OUTPUT_FOR_C  = NO
 OPTIMIZE_OUTPUT_JAVA   = NO
@@ -82,8 +83,8 @@ HIDE_SCOPE_NAMES       = NO
 SHOW_INCLUDE_FILES     = NO
 FORCE_LOCAL_INCLUDES   = NO
 INLINE_INFO            = NO
-SORT_MEMBER_DOCS       = YES
-SORT_BRIEF_DOCS        = YES
+SORT_MEMBER_DOCS       = NO
+SORT_BRIEF_DOCS        = NO
 SORT_MEMBERS_CTORS_1ST = YES
 SORT_GROUP_NAMES       = YES
 SORT_BY_SCOPE_NAME     = NO
@@ -99,7 +100,7 @@ SHOW_DIRECTORIES       = NO
 SHOW_FILES             = YES
 SHOW_NAMESPACES        = YES
 FILE_VERSION_FILTER    =
-LAYOUT_FILE            =
+LAYOUT_FILE            = nt2.xml
 
 ################################################################################
 # configuration options related to warning and progress messages
@@ -283,7 +284,7 @@ SEARCH_INCLUDES        = YES
 INCLUDE_PATH           =
 INCLUDE_FILE_PATTERNS  =
 PREDEFINED             = DOXYGEN_ONLY
-EXPAND_AS_DEFINED      =
+EXPAND_AS_DEFINED      = 
 SKIP_FUNCTION_MACROS   = YES
 
 ################################################################################
